--- a/css/style_headerFooter_mobile.css
+++ b/css/style_headerFooter_mobile.css
@@ -23,6 +23,10 @@ header {
     margin-left: 3%;
 }
 
+.header-menu>path {
+    fill: var(--c-yellow);
+}
+
 .header-logo {
   margin-right: 22%;
 }
