--- a/css/style_headerFooter_desktop.css
+++ b/css/style_headerFooter_desktop.css
@@ -10,32 +10,70 @@
 
 header {
     width: 100%;
+    justify-content: center;
+}
+
+.header-main {
+    width: 76%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.header-left {
+    min-width: 275px;
+    width: 17%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .header-logo {
-  margin-left: 12%;
   margin-right: 0%;
 }
 
 .header-geo {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    min-width: 95px;
+    width: 29%;
+}
+
+.header-geo-image>path {
+    fill: var(--c-yellow);
 }
 
 .header-geo-city {
-    margin-left: 5px;
-    width: 90px;
+    /*width: 60px;*/
     font-size: 15px;
     font-weight: 600;
     line-height: 20px;
-    border: 1px solid var(--c-white);
+}
+
+.header-right {
+    height: 100%;
+    min-width: 470px;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header-call {
-    margin-left: 7%;
+    display: flex;
+    flex-direction: row;
+     justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .header-call-number {
+    min-width: 145px;
     margin-left: 10px;
     font-size: 20px;
     font-weight: 700;
@@ -43,8 +81,31 @@ header {
     color: var(--c-yellow); 
 }
 
-.header-search {
-    margin-right: 12%;
+.header-kontakts-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.header-kontakts-container-text {
+    height: 100%;
+    padding: 0 10% 0 10%;
+    border-right: 1px solid var(--c-line);
+    border-left: 1px solid var(--c-line);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header-kontakts-container-img {
+    height: 100%;
+    min-width: 30px;
+    padding: 0 5% 0 5%;
+    border-right: 1px solid var(--c-line);
+    border-left: 1px solid var(--c-line);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 footer {
