--- a/css/style_home_mobile.css
+++ b/css/style_home_mobile.css
@@ -78,15 +78,16 @@
 .home-front-form-input {
     display: flex;
     flex-direction: column;
-    align-items: center;   
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .home-front-form-input>input {
     width: 300px;
     height: 40px;
-    margin-bottom: 10px;
     background: var(--c-inputColor);
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid var(--c-line);
+    color: var(--c-line);
     box-sizing: border-box;
     border-radius: 6px;
 }
@@ -115,8 +116,8 @@ button>span {
     margin-top: 10px;
 }
 
-.home-front-form-person>a {
-    color: var(--c-grey);   
+.home-front-form-person>span>a {
+    color: var(--c-line);   
 }
 
 /*---------------*/
