--- a/css/style_headerFooter_desktop.css
+++ b/css/style_headerFooter_desktop.css
@@ -15,15 +15,17 @@ header {
 
 .header-main {
     width: 76%;
+    margin-left: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     height: 100%;
+    box-sizing: border-box;
 }
 
 .header-left {
-    min-width: 275px;
-    width: 17%;
+    min-width: 260px;
+    width: 22%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -33,14 +35,14 @@ header {
 
 .header-logo {
   margin-right: 0%;
+  width: 145px;
 }
 
 .header-geo {
+    height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    min-width: 95px;
-    width: 29%;
+    align-items: center;
+    justify-content: center;
 }
 
 .header-geo-image>path {
@@ -48,16 +50,21 @@ header {
 }
 
 .header-geo-city {
-    /*width: 60px;*/
     font-size: 15px;
     font-weight: 600;
     line-height: 20px;
+    margin-right: 5px;
+    margin-left: 10px;
 }
 
 .header-right {
     height: 100%;
-    min-width: 470px;
-    width: 30%;
+    min-width: 475px;
+    width: 39%;
+}
+
+.header-right-container {
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -73,7 +80,6 @@ header {
 }
 
 .header-call-number {
-    min-width: 145px;
     margin-left: 10px;
     font-size: 20px;
     font-weight: 700;
@@ -84,7 +90,7 @@ header {
 .header-kontakts-container {
     height: 100%;
     display: flex;
-    flex-direction: row;
+    min-width: 170px;
 }
 
 .header-kontakts-container-text {
@@ -100,9 +106,8 @@ header {
 .header-kontakts-container-img {
     height: 100%;
     min-width: 30px;
-    padding: 0 5% 0 5%;
+    padding: 0 10% 0 10%;
     border-right: 1px solid var(--c-line);
-    border-left: 1px solid var(--c-line);
     display: flex;
     flex-direction: row;
     align-items: center;
