--- a/css/style_headerFooter_mobile.css
+++ b/css/style_headerFooter_mobile.css
@@ -11,7 +11,6 @@ header {
     height: 65px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     font-size: 15px;
     font-weight: 600;
@@ -20,19 +19,21 @@ header {
 }
 
 .header-menu {
-    margin-left: 3%;
+    margin-left: 10px;
 }
 
 .header-menu>path {
     fill: var(--c-yellow);
 }
 
-.header-logo {
-  margin-right: 22%;
+.header-main {
+    margin-left: 25px;
+    width: 130px;
 }
 
-.header-search {
-    margin-right: 6%;
+.header-kontakts-container-img-mob {
+  margin-left: 90px;
+  width: 25px;
 }
 
 footer {
