--- a/css/style_root.css
+++ b/css/style_root.css
@@ -2,6 +2,7 @@
     /* background */
     --c-white: #FFFFFF;
     --c-yellow: #FFED00;
+    --c-red: #DD4B39;
     --c-lightGrey: #E5E5E5;
     --c-activeButtton: #EDEBCF;
     --c-green: #C5B927;
