--- a/css/style_headerFooter_mobile.css
+++ b/css/style_headerFooter_mobile.css
@@ -46,7 +46,13 @@ footer {
     line-height: 18px;
     background-color: var(--c-footer);
     color: var(--c-footerColor);
-    letter-spacing: 1px;  /*растянул*/
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .footer-logo {
@@ -154,27 +160,31 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 15px;
-    margin-left: 10px;
     width: 260px;
     align-items: center;
 }
 
 .visa {
-    width: 35px;
-    height: 10px;
+    margin-right: 18px;
 }
 
 .master {
-    width: 10px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
+    margin-right: 22px;
 }
 
 .peace {
-    width: 35px;
-    height: 10px;
+    width: 40px;
+    height: 40px;
+    margin-right: 18px;
 }
 
 .mbank {
     width: 110px;
     height: 20px;
+}
+
+.fa-vk, .fa-facebook-f, .fa-youtube, .fa-instagram {
+    font-size: 24px;
 }
