--- a/css/style_headerFooter_desktop.css
+++ b/css/style_headerFooter_desktop.css
@@ -43,6 +43,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .header-geo-image>path {
@@ -55,6 +56,30 @@ header {
     line-height: 20px;
     margin-right: 5px;
     margin-left: 10px;
+}
+
+.header-geo-city-menu {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    width: 190px;
+    height: 224px;
+    background-color: var(--c-white);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px 20px 15px;
+}
+
+.header-geo-city-menu-item {
+    width: 160px;
+    height: 32px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header-right {
