--- a/css/style_home_desktop.css
+++ b/css/style_home_desktop.css
@@ -20,6 +20,7 @@
 
 .home-front-selects-items {
     width: 100%;
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -51,11 +52,37 @@
 .home-front-selects-items-item {
     margin-left: 4%;
     width: 75%;
+    height: 22px;
     background-color: var(--c-lightGrey);
     border: 1px solid var(--c-lightGrey);
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
+    overflow: hidden;
+}
+
+.home-front-selects-items-menu {
+    position: absolute;
+    top: 30px;
+    right: 0px;
+    width: 370px;
+    height: 245px;
+    background-color: var(--c-yellow);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px 20px 15px;
+}
+
+.home-front-selects-items-menu-item {
+    width: 340px;
+    height: 36px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .home-front-foto {
@@ -261,11 +288,19 @@ button {
     height: 150px;
 }
 
-.home-about-us-item-second-inputs>input {
+.home-about-us-item-second-inputs>input,
+.home-about-us-item-second-inputs>textarea {
     width: 97%;
     height: 80px;
     margin-top: 20px;
     border: 1px solid var(--c-white);
+}
+
+textarea::placeholder, input::placeholder {
+    font-family: var(--font-main);
+    font-size: 15px;
+    line-height: 20px;
+    color: var(--c-grey);
 }
 
 .home-about-us-item-second-inputs>div {
@@ -445,22 +480,6 @@ button {
     transform: rotate(180deg);
 }
 
-/*.dottedLine:nth-of-type(1) {
-    width: 40%;
-    height: 0;
-    margin: 0;
-    border: 1px dashed var(--c-line);
-    transform: rotate(180deg);
-}
-
-.dottedLine:nth-of-type(10) {
-    width: 3%;
-    height: 0;
-    margin: 0;
-    border: 1px dashed var(--c-line);
-    transform: rotate(180deg);
-}*/
-
 .circle-return {
     font-size: 20px;
     line-height: 27px;
@@ -496,38 +515,6 @@ button {
     border: 1px solid var(--c-line);
     transform: rotate(180deg);
 }
-
-/*.solidLine:nth-of-type(3) {
-     height: 0;
-    margin: 0;
-    border: 1px solid var(--c-line);
-    transform: rotate(180deg);
-    width: 40%;
-}
-
-.solidLine:nth-of-type(5) {
-     height: 0;
-    margin: 0;
-    border: 1px solid var(--c-line);
-    transform: rotate(180deg);
-    width: 14%;
-}
-
-.solidLine:nth-of-type(7) {
-    height: 0;
-    margin: 0;
-    border: 1px solid var(--c-line);
-    transform: rotate(180deg);
-    width: 13%
-}
-
-.solidLine:nth-of-type(9) {
-    height: 0;
-    margin: 0;
-    border: 1px solid var(--c-line);
-    transform: rotate(180deg);
-    width: 10%
-}*/
 
 .home-return-step {
     width: 20%;
