--- a/css/style_modals.css
+++ b/css/style_modals.css
@@ -1,8 +1,4 @@
-/*.modal-active {
-  opacity: 1;
-  pointer-events: all;
-}
-*/
+
 .modal {
   position: fixed;
   top: 0;
@@ -11,14 +7,144 @@
   width: 100%;
   transition: all 0.9s ease-in-out;
   pointer-events: none;
-  background: var(--c-yellow);
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  opacity: 1;
+}
+
+nonactive {
+  display: none;
 }
 
 .modal-menu-container {
-  width: 100%;
+  width: 320px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  background: var(--c-yellow);
+}
+
+.modal-menu-header {
+  width: 100%;
+  height: 65px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px 0 10px;
+  box-sizing: border-box;
+  margin-bottom: 25px;
+}
+
+.modal-menu-items {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.
+.modal-menu-items-item {
+  width: 100%;
+  padding: 0 10px 0 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.modal-menu-items-item1 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  margin-bottom: 30px;
+}
+
+.modal-menu-items-item-img>path {
+    fill: var(--c-white);
+} 
+
+.modal-menu-items-item2-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.modal-menu-items-item2-text>img {
+  margin-right: 20px;
+}
+
+.modal-menu-items-kontats {
+  width: 100%;
+  padding: 0 10px 0 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 160px;
+}
+
+.modal-menu-items-kontats-text {
+  width: 100%;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  margin-top: 25px;
+}
+
+.modal-menu-items-kontats-phone {
+  width: 100%;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--c-white);
+}
+
+.modal-menu-items-item2 {
+  width: 100%;
+  padding: 0 10px 0 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-sizing: border-box;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 25px;
+}
+
+.modal-menu-items-item2-img {
+  margin-right: 20px;
+}
+
+.line {
+  width: 300px;
+  height: 0px;
+  border: 1px solid var(--c-lineMadal);
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.modal-menu-font {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  height: 36px;
+  margin-left: 10px;
+}
+
+.modal-menu-items-item-img-right {
+  margin-right: 20px;
+}
+
+.modal-menu-items-item-too {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.modal-menu-items-item-text-left {
+  margin-left: 5px;
+}
