--- a/css/style_headerFooter_mobile.css
+++ b/css/style_headerFooter_mobile.css
@@ -32,8 +32,20 @@ header {
 }
 
 .header-kontakts-container-img-mob {
-  margin-left: 90px;
-  width: 25px;
+  margin-left: 70px;
+  width: 55px;
+  height: 100%;
+}
+
+.header-kontakts-container-img-mob-m {
+  height: 100%;
+  width: 100%;
+  display: flex;  
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-right: 1px solid var(--c-line);
+  border-left: 1px solid var(--c-line);
 }
 
 footer {
